# pysbol3_playground

./: alt_history_example.json  best_practices_example.ipynb  example1.py  example1.ttl  example1.xml  example2.py  example2.ttl  example2.xml  example2_alt.ttl  example2_alt.xml  example_combine.ttl  example_combine.xml  history_example.json  make_graph.sh  mini_example.py  mini_example.ttl  pyproject.toml  questions.md  readme.md
